--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.1.4.Final</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
@@ -51,7 +56,7 @@
 			<artifactId>spring-jms</artifactId>
 			<version>4.1.7.RELEASE</version>
 		</dependency>
-	</dependencies>
+		</dependencies>
 	<build>
 		<plugins>
 			<plugin>
