--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,14 @@
 			<artifactId>spring-jms</artifactId>
 			<version>4.1.7.RELEASE</version>
 		</dependency>
-		</dependencies>
+
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka_2.12</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
