--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,13 @@
 			<artifactId>spring-jms</artifactId>
 			<version>4.1.7.RELEASE</version>
 		</dependency>
-		</dependencies>
+
+		<dependency>
+			<groupId>org.owasp.esapi</groupId>
+			<artifactId>esapi</artifactId>
+			<version>2.1.0.1</version>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
